@@ -2,6 +2,8 @@ The following changes have been made between John 1.7.4.2 and 1.7.5:
 
 * Support for the use of "--format" along with "--show" or "--make-charset" has
 been added.
+* The choice of .rec and .log filenames for custom session names has been made
+more intuitive.
 * Support for "\r" (character lists with repeats) and "\p0" (reference to the
 immediately preceding character list/range) has been added to the word mangling
 rules preprocessor.
@@ -137,4 +139,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.38 2010/02/24 18:27:30 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.39 2010/02/26 00:10:58 solar Exp $
